--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <section class="conteudo-principal">
-    <h2 class="titulo-principal">Meus objetivos do ano_</h2>
+    <h2 class="titulo-principal">Meus objetivos do ano <span></span>_</h2>
     <div class="botoes">
-        <button class="botao">curso no alura</button>
-        <button class="botao">criar projetos em Javascript</button>
-        <button class="botao">criar um portifolio</button>
-        <button class="botao">atualizar meu curriculo</button>
+        <button class="botao">Não reprovar</button>
+        <button class="botao">Passar no Enem</button>
+        <button class="botao">Trabalhar</button>
+        <button class="botao">Aprender inglês</button>
     </div>
     </section>
 </body>
