--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
 </head>
 <body>
     <section class="conteudo-principal">
-    <h2 class="titulo-principal">Meus objetivos do ano <span></span>_</h2>
-    <div class="botoes">
-        <button class="botao">Não reprovar</button>
-        <button class="botao">Passar no Enem</button>
-        <button class="botao">Trabalhar</button>
-        <button class="botao">Aprender inglês</button>
-    </div>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <div class="botoes">
+            <button class="botao ativo">Passar de ano</button>
+            <button class="botao">Ser aprovada no enem</button>
+            <button class="botao">trabalhar</button>
+            <button class="botao">aprender ingles</button>
+        </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar muito</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
+            </div>
+            <div class="abas-textos">
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">tirar 1h pra Estudar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
+                </div>
+        </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
