--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
                     <h3 class="aba-conteudo-titulo-principal">tirar 1h pra Estudar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
                 </div>
+            </div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Arrumar um emprego</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
+                    </div>
+                </div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Me dedicar para aprender ingles</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivos</h4>
+                    </div>
         </div>
     </section>
     <script src="main.js"></script>
